Correct alignment of filters on classes list

--- a/static/css/classes.css
+++ b/static/css/classes.css
@@ -1,5 +1,5 @@
 .filters {
-  text-align:center;
+  text-align:right;
   margin:0;
   padding:25px 0;
   border-top:2px solid #ceecee;
